<resources>
    <string name="app_name">Doctor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_login">Login</string>
    <string name="login">Login</string>
    <string name="pass">Пароль</string>
    <string name="enter">Войти</string>
    <string name="logo">logo</string>
    <string name="logoBack">logoBackground</string>
    <string name="simpleName">Георгий Кругликов</string>
    <string name="imageDoc">imageDoc</string>
    <string name="calls">Вызовы</string>
    <string name="messages">Сообщения</string>
    <string name="history">История вызовов</string>
    <string name="settings">Профиль</string>
    <string name="about">О приложении</string>
    <string name="exit">Выход</string>
    <string name="chats">Чаты</string>

    <string name="dialog_title">О приложении</string>
    <string name="dialog_title_new">Что нового</string>
    <string name="dialog_version">Версия</string>
    <string name="dialog_close">Закрыть</string>

    <string name="surname">Фамилия</string>
    <string name="middleName">Отчество</string>
    <string name="name">Имя</string>
    <string name="address_title">Домашний адрес</string>
    <string name="address_not_set">Не задан</string>
    <string name="address_city">Город</string>
    <string name="address_street">Улица</string>
    <string name="address_house_number">Дом</string>
    <string name="address_building">Строение</string>
    <string name="address_block">Корпус</string>
    <string name="address_my_location">Моё местоположение</string>
    <string name="address_pin_info">Если на карте неправильно определилось местоположение вашего дома, то вы можете изменить местоположение перемещая пин</string>
    <string name="profile_save">Сохранить</string>
    <string name="profile_cancel">Отмена</string>
    <string name="profile_edit">Изменить</string>
    <string name="descriptionSettings">settingPhoto_iv</string>
    <string name="status">Статус</string>
    <string name="notification">Нотификация</string>
    <string name="statusFree">Свободен</string>
    <string name="statusBusy">Занят</string>
    <string name="statusLunch">Обедаю</string>
    <string name="allow">Принять</string>
    <string name="refuse">Отказаться</string>
    <string name="sсheduleToday">Расписание на сегодня</string>
    <string name="search">Поиск</string>
    <string name="appLogin">doctorApplication</string>
    <string name="appPassword">nXNWdiOL}zCl</string>
    <string name="writeLogin">Впишите логин</string>
    <string name="writePass">Впишите пароль</string>
    <string name="error">Ошибка соединения с сервером</string>
    <string name="notNewCalls">Нет новых вызовов</string>
    <string name="statusNotChanged">Не удалось сменить статус</string>
    <string name="Iarrived">Подъехал к дому</string>
    <string name="Arrived">Прибыл</string>
    <string name="Complete">Завершить</string>
    <string name="finished">Завершено!</string>
    <string name="repeat">Повторить</string>
    <string name="writePatientCard">*Заполните электронную карточку пациента!</string>
    <string name="application">"Заявка"</string>
    <string name="st">"ул."</string>
    <string name="house">, дом</string>
    <string name="fl">, кв</string>
    <string name="numberIntercom">"Номер домофона: "</string>
    <string name="numberPhone">"Телефон: "</string>
    <string name="birthday">"Дата рождения: "</string>
    <string name="getCall">Выезжаю на вызов</string>
    <string name="newCall">Новый вызов</string>
    <string name="sick">Больной</string>
    <string name="currentCall">Текущий вызов</string>
    <string name="doubleClickBack">Нажмите НАЗАД ещё раз, что бы выйти</string>
    <string name="notGetNewCall">Не удалось получить новые заявки</string>
    <string name="notgetFalsCAll">Не удалось принять/отклонить заявку</string>
    <string name="geoPermissionDeni">Вы не дали разрешение на определение гелокации</string>
    <string name="call">"Заявка "</string>
    <string name="pointFlat">", квартира "</string>
    <string name="pointHouse">", дом "</string>
    <string name="street">"ул. "</string>
    <string name="today">"Сегодня - "</string>
    <string name="yestarday">"Вчера - "</string>
    <string name="enableGeo">Включить геолокацию</string>
    <string name="settingsGeo">Настройки</string>
    <string name="cancel">Отмена</string>
    <string name="offline">Не в сети</string>
    <string name="emptyCalls">У Вас нет ни одной активной заявки</string>
    <string name="emptyHistory">История вызовов пуста</string>
    <string name="emptyChats">У Вас нет ни одного чата</string>
    <string name="dateCange">Данные успешно изменены</string>



    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="call_id_format">Заявка № %d</string>
    <string name="session_cancel_orders_message">В Вашем текущем расписании еще есть незавершенные вызовы. Вы действительно хотите завершить рабочую смену? При подтверждении окончания смены все невыполненные вызовы в расписании будут отменены.</string>
    <string name="services">Услуги</string>
    <string name="procedures">Процедуры</string>
    <string name="analysis">Анализы</string>
    <string name="general">Общие</string>
    <string name="doctor_appointment">Назначение врача</string>
    <string name="doctor_appointment_description">Сфотографируйте назначение врача перед началом процедур.</string>
    <string name="cancel_action">Отмена</string>
    <string name="continue_action">Продолжить</string>
    <string name="skip_action">Пропустить</string>
    <string name="delete_action">Удалить</string>
    <string name="upload_error">Во время загрузки файлов произошла ошибка</string>
    <string name="error_image_delete">Фотографию невозможно удалить: она уже загружена на сервер</string>
    <string name="send_report">Сообщить об ошибке</string>
    <string name="email_subject">Логи приложения от %1$s</string>
    <string name="email_body">Логин: %1$s\nМодель: %2$s\nОС: %3$s\nВерсия приложения: %4$s</string>
</resources>
