<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@drawable/background_content_settings">

        <!---->

        <!--<ImageView-->
        <!--<ru.handh.doctor.utils.ImageViewTopCrop-->
            <!--android:id="@+id/settingPhoto_iv"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="350dp"-->
            <!--android:contentDescription="@string/descriptionSettings"-->
            <!--android:src="@drawable/simple_photo_doctor"/>-->

        <ImageView
            android:id="@+id/settingPhoto_iv"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:contentDescription="@string/descriptionSettings"
            />

        <FrameLayout
            android:id="@+id/info_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settingPhoto_iv">

            <RelativeLayout
                android:id="@+id/info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp">
                <EditText
                    android:id="@+id/settingsName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="16dp"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center"
                    android:hint="@string/name"

                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAllCaps="true" />

                <EditText
                    android:id="@+id/settingsMiddleName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settingsName"
                    android:layout_marginBottom="10dp"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center"
                    android:hint="@string/middleName"

                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAllCaps="true" />

                <EditText
                    android:id="@+id/settingsSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settingsMiddleName"
                    android:layout_marginBottom="30dp"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center"
                    android:hint="@string/surname"

                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAllCaps="true" />

                <TextView
                    android:id="@+id/settingsAddressTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settingsSurname"
                    android:layout_marginBottom="10dp"
                    android:text="@string/address_title"
                    android:textColor="#b0b0b0" />

                <TextView
                    android:id="@+id/settingsAddressValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settingsAddressTitle"
                    android:layout_marginBottom="30dp"
                    android:text="@string/address_not_set" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/edit_fields_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:visibility="gone">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/settingsName_tip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/settingsNameEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/name"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/settingsMiddleName_tip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settingsName_tip"
                    android:layout_marginBottom="10dp"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/settingsMiddleNameEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/middleName"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/settingsSurname_tip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settingsMiddleName_tip"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/settingsSurnameEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/surname"
                        android:inputType="text"
                        android:maxLines="1"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/settingsCity_tip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settingsSurname_tip"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/settingsCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/address_city"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/settingsStreet_tip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settingsCity_tip"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/settingsStreet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/address_street"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/settingsHouse_tip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settingsStreet_tip"
                    android:layout_marginBottom="30dp">

                    <EditText
                        android:id="@+id/settingsHouse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/address_house_number"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settingsHouse_tip"
                    android:layout_marginBottom="10dp"
                    android:text="@string/address_pin_info"
                    android:textColor="#b0b0b0" />
            </RelativeLayout>

        </FrameLayout>

        <ru.handh.doctor.ui.controls.CustomMapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_below="@+id/info_frame"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/edit_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/mapView"
            android:layout_marginBottom="10dp"
            android:text="@string/profile_edit"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/edit_buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/mapView"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/my_location_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:text="@string/address_my_location"
                android:textAllCaps="true"
                android:textColor="#b0b0b0"
                android:textSize="14sp" />

            <Button
                android:id="@+id/profile_cancel_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:text="@string/profile_cancel"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <Button
                android:id="@+id/profile_save_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_save"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>